Fix scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,6 @@ body {
       opacity: 1;
    }
 } */
-
 @layer utilities {
   .scrollbar::-webkit-scrollbar {
     width: 15px;
@@ -69,16 +68,18 @@ body {
     border-top-right-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
 
-    background: #e8e8e8;
+    @apply bg-gray-300 dark:bg-slate-600;
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
-    background: #b2b2b2;
+    @apply bg-gray-400 dark:bg-slate-700;
+
     border-radius: 0.5rem;
-    border: 3px solid #e8e8e8;
+    border: 3px solid;
+    @apply border-2 border-gray-300 dark:border-slate-600;
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
-    background: #a8a8a8;
+    @apply bg-gray-500 dark:bg-slate-800;
   }
 }
